--- a/jxcx/USER/TEMP.uvprojx
+++ b/jxcx/USER/TEMP.uvprojx
@@ -669,31 +669,19 @@
             </File>
           </Files>
         </Group>
-        <Group>
-          <GroupName>::Data Exchange</GroupName>
-        </Group>
       </Groups>
     </Target>
   </Targets>
 
   <RTE>
     <apis/>
-    <components>
-      <component Cclass="Data Exchange" Cgroup="JSON" Csub="Jansson" Cvendor="Keil" Cversion="2.7.0" condition="ARMCC">
-        <package license="doc\license.txt" name="Jansson" schemaVersion="1.0" url="http://www.keil.com/pack/" vendor="Keil" version="1.0.0"/>
-        <targetInfos>
-          <targetInfo name="TEMP"/>
-        </targetInfos>
-      </component>
-    </components>
+    <components/>
     <files>
       <file attr="config" category="source" name="src\jansson_config.c" version="2.7.0">
-        <instance index="0">RTE\Data_Exchange\jansson_config.c</instance>
+        <instance index="0" removed="1">RTE\Data_Exchange\jansson_config.c</instance>
         <component Cclass="Data Exchange" Cgroup="JSON" Csub="Jansson" Cvendor="Keil" Cversion="2.7.0" condition="ARMCC"/>
         <package license="doc\license.txt" name="Jansson" schemaVersion="1.0" url="http://www.keil.com/pack/" vendor="Keil" version="1.0.0"/>
-        <targetInfos>
-          <targetInfo name="TEMP"/>
-        </targetInfos>
+        <targetInfos/>
       </file>
     </files>
   </RTE>
