--- a/jxcx/.vscode/settings.json
+++ b/jxcx/.vscode/settings.json
@@ -30,6 +30,7 @@
         "stm32f4xx_hal_def.h": "c",
         "stm32_hal_legacy.h": "c",
         "stm32f4xx_hal.h": "c",
-        "stm32f4xx_hal_conf.h": "c"
+        "stm32f4xx_hal_conf.h": "c",
+        "stm32f4xx_flash.h": "c"
     }
 }
