--- a/jxcx/USER/TEMP.uvprojx
+++ b/jxcx/USER/TEMP.uvprojx
@@ -397,6 +397,11 @@
               <FileType>1</FileType>
               <FilePath>.\system_stm32f4xx.c</FilePath>
             </File>
+            <File>
+              <FileName>JDY.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\JDY.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
