--- a/jxcx/.vscode/settings.json
+++ b/jxcx/.vscode/settings.json
@@ -31,6 +31,7 @@
         "stm32_hal_legacy.h": "c",
         "stm32f4xx_hal.h": "c",
         "stm32f4xx_hal_conf.h": "c",
-        "stm32f4xx_flash.h": "c"
+        "stm32f4xx_flash.h": "c",
+        "stem.h": "c"
     }
 }
