--- a/jxcx/USER/TEMP.uvprojx
+++ b/jxcx/USER/TEMP.uvprojx
@@ -402,6 +402,16 @@
               <FileType>1</FileType>
               <FilePath>.\JDY.c</FilePath>
             </File>
+            <File>
+              <FileName>SCALES.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\SCALES.c</FilePath>
+            </File>
+            <File>
+              <FileName>STEPM.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\STEPM.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
