--- a/ds_ucos/Project/RVMDK（uv5）/Fire_uCOS.uvprojx
+++ b/ds_ucos/Project/RVMDK（uv5）/Fire_uCOS.uvprojx
@@ -397,6 +397,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\Libraries\CMSIS\Device\ST\STM32F4xx\Source\Templates\system_stm32f4xx.c</FilePath>
             </File>
+            <File>
+              <FileName>arm_cortexM4lf_math.lib</FileName>
+              <FileType>4</FileType>
+              <FilePath>..\..\Libraries\CMSIS\DSP\arm_cortexM4lf_math.lib</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -819,6 +824,11 @@
               <FileName>APP_SCALES.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\User\APP\MY_APP\APP_SCALES.c</FilePath>
+            </File>
+            <File>
+              <FileName>APP_STEPM.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\User\APP\MY_APP\APP_STEPM.c</FilePath>
             </File>
           </Files>
         </Group>
